<resources>
    <string name="app_name">MuseumEntry</string>
    <string name="color">Color: </string>
    <string name="name">Name: </string>
    <string name="title_activity_beacon_detail_entry">Beacon Details</string>
    <string name="wait_until_beacon_connected">You have to wait until your beacon is connected.</string>
    <string name="alert_ok">Ok</string>
    <string name="configuration_succeeded">Configuration succeeded.</string>
    <string name="configure_next_beacon">Configure next beacon</string>
    <string name="writing_settings">Writing settings</string>
    <string name="please_wait">Please wait.</string>
    <string name="disconnect">Connection Status:</string>
    <string name="connect">Connected</string>
    <string name="estimated_distance">Estimated Distance :</string>
    <string name="list_of_beacons">List Of Beacons</string>
    <string name="error_timeout">Please Re-scan and select Beacon again</string>
    <string name="error_internet_connection">Internet connection is required</string>
    <string name="maximum_range">Maximum range</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="error_sticker_exist">Please select different Sticker ID</string>
    <string name="error_device_disconnected">Device is disconnected. Please Re-scan</string>
    <string name="floor_no">Floor No :</string>
    <string name="sticker_no">Sticker No.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="range_settings">Range Settings</string>
    <string name="select_range">Select Range</string>
    <string name="label_range">Range</string>

    <string-array name="list_pref_power">
        <item>-40</item>
        <item>-20</item>
        <item>-16</item>
        <item>-12</item>
        <item>-8</item>
        <item>-4</item>
        <item>-0</item>
        <item>4</item>
    </string-array>
    <string-array name="list_pref_range">
        <item>1.5m</item>
        <item>3.5m</item>
        <item>7m</item>
        <item>15m</item>
        <item>30m</item>
        <item>40m</item>
        <item>50m</item>
        <item>70m</item>
    </string-array>
</resources>
