<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

    <TextView
            android:id="@+id/tvBeaconID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="43fdff0fdfln23403nfsdaf"/>

    <TextView
            android:id="@+id/tvColorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBeaconID"
            android:layout_marginTop="4dp"
            android:text="@string/color"
            android:textSize="13sp"/>

    <TextView
            android:id="@+id/tvBeaconColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBeaconID"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/tvColorTitle"
            android:textSize="13sp"
            tools:text="BLUE"/>

    <TextView
            android:id="@+id/tvNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvColorTitle"
            android:layout_marginTop="4dp"
            android:text="@string/name"
            android:textSize="13sp"/>

    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvBeaconColor"
            android:layout_below="@+id/tvColorTitle"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/tvNameTitle"
            android:textSize="13sp"
            tools:text="ICE"/>

    <TextView
            android:layout_marginTop="4dp"
            android:layout_below="@+id/tvNameTitle"
            android:text="@string/floor_no"
            android:id="@+id/tvFloorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/tvFloorTitle"
            android:layout_alignBottom="@+id/tvFloorTitle"
            tools:text="32536"
            android:id="@+id/tvFloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNameTitle"/>

    <TextView
            android:layout_below="@+id/tvFloorTitle"
            android:layout_marginTop="4dp"
            android:id="@+id/tvStickerNoTitle"
            android:text="@string/sticker_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/tvStickerNoTitle"
            android:layout_alignBottom="@+id/tvStickerNoTitle"
            tools:text="32536"
            android:id="@+id/tvStickerNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFloorTitle"/>


    <TextView
            android:id="@+id/tvEstimateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStickerNoTitle"
            android:layout_marginTop="4dp"
            android:text="@string/estimated_distance"/>

    <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStickerNoTitle"
            android:layout_alignBottom="@+id/tvEstimateTitle"
            android:layout_toRightOf="@+id/tvEstimateTitle"/>
</RelativeLayout>